# Qt6-Framework-Core-Beginner

./: .gitignore  README.md
01-First_Steps/: CMakeLists.txt
03-First_Steps/01-Hello_World/: CMakeLists.txt
04-Variables_and_Constants/01-Enum/: CMakeLists.txt  main.cpp
04-Variables_and_Constants/02-Struct/: CMakeLists.txt  main.cpp
05-Input_and_Output/01-QDebug/: CMakeLists.txt  main.cpp
06-Flow_Control/01-Ternary/: CMakeLists.txt  main.cpp
07_Functions/01-Functions_in_Struct/: CMakeLists.txt  main.cpp
07_Functions/02-Overloading/: CMakeLists.txt  main.cpp
07_Functions/03-Returning_Values/: CMakeLists.txt  main.cpp
08-Classes/01-First_Class/: CMakeLists.txt  animal.cpp  animal.h  main.cpp
08-Classes/02-Constructor_and_Deconstructor/: CMakeLists.txt  laptop.cpp  laptop.h  main.cpp
08-Classes/03-Interface/: CMakeLists.txt  Freezer.h  Microwave.h  Toaster.h  appliance.cpp  appliance.h  main.cpp
08-Classes/04-Age_Calculator/: CMakeLists.txt  agecalc.cpp  agecalc.h  main.cpp
09-Scope/01-Scope/: CMakeLists.txt  animal.cpp  animal.h  main.cpp
09-Scope/02-Static_Scope/: CMakeLists.txt  animal.cpp  animal.h  main.cpp
10_Pointers/01-Manual_and_Automatic_Memory_Management/: CMakeLists.txt  main.cpp  test.cpp  test.h
10_Pointers/02-QObject_Parent_Child/: CMakeLists.txt  animal.cpp  animal.h  main.cpp  person.cpp  person.h
11-Signal_and_Slots/01-Basic_Signal_and_Slots/: CMakeLists.txt  main.cpp  test.cpp  test.h
11-Signal_and_Slots/02-Connecting/: CMakeLists.txt  destination.cpp  destination.h  main.cpp  source.cpp  source.h
11-Signal_and_Slots/03-Disconnecting/: CMakeLists.txt  main.cpp  radio.cpp  station.cpp  station.h
11-Signal_and_Slots/04-Q_Property/: CMakeLists.txt  main.cpp  test.cpp  test.h  watcher.cpp
11-Signal_and_Slots/05-Timer_Example/: CMakeLists.txt  main.cpp  test.cpp  test.h
11-Signal_and_Slots/06-Dog_Example/: CMakeLists.txt  dog.cpp  main.cpp  owner.cpp  owner.h
12-Casting/01-Dynamic_Casting/: CMakeLists.txt  car.cpp  car.h  main.cpp  racecar.cpp  racecar.h
12-Casting/02-Static_Casting/: CMakeLists.txt  car.cpp  car.h  main.cpp  racecar.cpp  racecar.h
12-Casting/03-QObject_Casting/: CMakeLists.txt  car.cpp  car.h  main.cpp  racecar.cpp  racecar.h
13-Exception_Handling/01-Throwing/: CMakeLists.txt  main.cpp
13-Exception_Handling/02-Try_Catch/: CMakeLists.txt  main.cpp
14-Templates/01-Template_Example/: CMakeLists.txt  main.cpp
14-Templates/02-QObject_and_Template/: CMakeLists.txt  main.cpp
15-Basic_Qt_Classes/01-Qt_int_types/: CMakeLists.txt  main.cpp
15-Basic_Qt_Classes/02-QDate_QTime_QDatetime/: CMakeLists.txt  main.cpp
15-Basic_Qt_Classes/03-QString/: CMakeLists.txt  main.cpp
15-Basic_Qt_Classes/08-QMap/: CMakeLists.txt  main.cpp  pet.cpp  pet.h
(+8 files in other folders)
